--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <ul>
                 <li><a href="">Текстовые редакторы</a>
                 <ul>
-                <li><a href="word.html">Итоговая работа</a></li>
+                <li><a href="page/word.html">Итоговая работа</a></li>
                 </ul>
                 </li>
                 <li><a href="">Презентации</a>
                 <ul>
-                    <li><a href="pres1.html">Менеджмент</a></li>
-                    <li><a href="pres2.html">Бытовая техника</a></li>
+                    <li><a href="page/pres1.html">Менеджмент</a></li>
+                    <li><a href="page/pres2.html">Бытовая техника</a></li>
                 </ul>
                 </li>
                 <li><a href="page/gimp.html">Gimp</a></li>
@@ -34,8 +34,8 @@
                 <li><a href="page/html.html">HTML</a></li>
             </ul>
         </li>
-            <li><a href="achievements.html" target="_blank"><i class="fas fa-trophy"></i>Мои достижения</li></a>
-            <li><a href="aboutme.html" target="_blank"><i class="fas fa-address-card"></i>Обо мне</li></a>
+            <li><a href="page/achievements.html" target="_blank"><i class="fas fa-trophy"></i>Мои достижения</li></a>
+            <li><a href="page/aboutme.html" target="_blank"><i class="fas fa-address-card"></i>Обо мне</li></a>
         </ul>
     </div>
 </header>
