--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
         </li>
             <li><a href="page/achievements.html" target="_blank"><i class="fas fa-trophy"></i>Мои достижения</li></a>
-            <li><a href="page/aboutme.html" target="_blank"><i class="fas fa-address-card"></i>Обо мне</li></a>
+            <li><a href="../page/aboutme.html" target="_blank"><i class="fas fa-address-card"></i>Обо мне</li></a>
         </ul>
     </div>
 </header>
