--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
             <ul>
                 <li><a href="">Текстовые редакторы</a>
                 <ul>
-                <li><a href="../page/word.html">Итоговая работа</a></li>
+                <li><a href="page/word.html">Итоговая работа</a></li>
                 </ul>
                 </li>
                 <li><a href="">Презентации</a>
                 <ul>
-                    <li><a href="../page/pres1.html">Менеджмент</a></li>
-                    <li><a href="../page/pres2.html">Бытовая техника</a></li>
+                    <li><a href="page/pres1.html">Менеджмент</a></li>
+                    <li><a href="page/pres2.html">Бытовая техника</a></li>
                 </ul>
                 </li>
-                <li><a href="../page/gimp.html">Gimp</a></li>
-                <li><a href="../page/inkscape.html">Incscape</a></li>
-                <li><a href="../page/scribus.html">Scribus</a></li>
-                <li><a href="../page/html.html">HTML</a></li>
+                <li><a href="page/gimp.html">Gimp</a></li>
+                <li><a href="page/inkscape.html">Incscape</a></li>
+                <li><a href="page/scribus.html">Scribus</a></li>
+                <li><a href="page/html.html">HTML</a></li>
             </ul>
         </li>
-            <li><a href="../page/achievements.html" target="_blank"><i class="fas fa-trophy"></i>Мои достижения</li></a>
-            <li><a href="../page/aboutme.html" target="_blank"><i class="fas fa-address-card"></i>Обо мне</li></a>
+            <li><a href="page/achievements.html" target="_blank"><i class="fas fa-trophy"></i>Мои достижения</li></a>
+            <li><a href="page/aboutme.html" target="_blank"><i class="fas fa-address-card"></i>Обо мне</li></a>
         </ul>
     </div>
 </header>
