--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 </header>
 <div class="contentx">
-    <div class="photo"><img src="../assets/img/fbfff6a63b4c0931887c8a399234fe07--nature-instagram.jpg" width="400px"></div> 
+    <div class="photo"><img src="assets/img/fbfff6a63b4c0931887c8a399234fe07--nature-instagram.jpg" width="400px"></div> 
     <div class="text">
         
         <div class="content-2">Сайт портфолио</div>
