--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <ul>
                     <li><a href="page/pres1.html">Менеджмент</a></li>
                     <li><a href="page/pres2.html">Бытовая техника</a></li>
+                    <li><a href="page/pres3.html">ЛР1</a></li>
                 </ul>
                 </li>
                 <li><a href="page/gimp.html">Gimp</a></li>
