--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="">Текстовые редакторы</a>
                 <ul>
                 <li><a href="page/word.html">Итоговая работа</a></li>
+                <li><a href="page/word1.html">ЛР2</a></li>
                 </ul>
                 </li>
                 <li><a href="">Презентации</a>
