--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
 						<li><a href="page/pres3.html">ЛР1</a></li>
 					</ul>
 				</li>
+				<li><li><a href="">Illustrator</a>
+					<ul>
+						<li><a href="page/pres3.html">ЛР1</a></li>
+					</ul>
+				</li>
+				<li><li><a href="">Заметки</a>
+					<ul>
+						<li><a href="assets/pdf/Заметка 1.pdf">Заметка 1</a></li>
+						<li><a href="assets/pdf/Заметка 2.pdf">Заметка 2</a></li>
+						<li><a href="assets/pdf/Заметка 3.pdf">Заметка 3</a></li>
+					</ul>
+				</li>
                 		</ul>
 			</li>
 			<li><a href="">Другие</a>
